Se agrego lista de opiniones

--- a/app/src/main/res/layout/activity_cascaron_negocio_interfaz_negocio.xml
+++ b/app/src/main/res/layout/activity_cascaron_negocio_interfaz_negocio.xml
@@ -4,6 +4,175 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".cascaron_negocio_interfazNegocio">
+    android:background="@drawable/des_btn"
+    tools:context=".perfilLocales">
+
+    <ImageView
+        android:id="@+id/img_Local_Perfil_Locales"
+        android:layout_width="304dp"
+        android:layout_height="244dp"
+        android:background="@drawable/diseno_txt"
+        android:importantForAccessibility="no"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.059"
+        tools:ignore="ImageContrastCheck"
+        tools:srcCompat="@tools:sample/avatars" />
+
+    <Button
+        android:id="@+id/btn_gps"
+        style="@style/diseño_botones"
+        android:layout_width="140dp"
+        android:layout_height="50dp"
+        android:onClick="streetview"
+        android:text="Ver catalogo"
+        android:textColor="#000000"
+        android:textSize="13dp"
+        android:textStyle="bold|italic"
+        app:backgroundTint="@null"
+        app:icon="@drawable/catalogo"
+        app:iconSize="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.14"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.745"
+        tools:ignore="TextSizeCheck" />
+
+    <Button
+        android:id="@+id/btn_tel"
+        style="@style/diseño_botones"
+        android:layout_width="140dp"
+        android:layout_height="50dp"
+        android:onClick="llamarTelefono"
+        android:text="Ver citas"
+        android:textColor="#000000"
+        android:textSize="13dp"
+        android:textStyle="bold|italic"
+        app:backgroundTint="@null"
+        app:icon="@drawable/opinion"
+        app:iconSize="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.14"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.842"
+        tools:ignore="TextSizeCheck" />
+
+    <Button
+        android:id="@+id/btn_correo"
+        style="@style/diseño_botones"
+        android:layout_width="140dp"
+        android:layout_height="50dp"
+        android:onClick="mandarCorreo"
+        android:text="Ver chats"
+        android:textColor="#000000"
+        android:textSize="13dp"
+        android:textStyle="bold|italic"
+        app:backgroundTint="@null"
+        app:icon="@drawable/ema"
+        app:iconSize="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.859"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.842"
+        tools:ignore="TextSizeCheck" />
+
+    <Button
+        android:id="@+id/btn_web"
+        style="@style/diseño_botones"
+        android:layout_width="140dp"
+        android:layout_height="50dp"
+        android:onClick="abrirPagina"
+        android:text="Publicar anuncio"
+        android:textColor="#000000"
+        android:textSize="13dp"
+        android:textStyle="bold|italic"
+        app:backgroundTint="@null"
+        app:icon="@drawable/publi"
+        app:iconSize="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.859"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.745"
+        tools:ignore="TextSizeCheck" />
+
+    <TextView
+        android:id="@+id/txt_dir_perfil_locales"
+        android:layout_width="337dp"
+        android:layout_height="124dp"
+        android:background="@drawable/dis_back_txt"
+        android:gravity="center"
+        android:textColor="#000000"
+        android:textSize="25dp"
+        android:textStyle="italic"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.583" />
+
+    <TextView
+        android:id="@+id/txt_nombre_local_perfil_locales"
+        style="@style/diseño_botones"
+        android:layout_width="335dp"
+        android:layout_height="41dp"
+        android:layout_marginStart="38dp"
+        android:layout_marginEnd="38dp"
+        android:background="@drawable/dis_txt"
+        android:gravity="center"
+        android:textColor="#000000"
+        android:textSize="13dp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.424" />
+
+    <Button
+        android:id="@+id/btn_ver_fotos"
+        style="@style/diseño_botones"
+        android:layout_width="140dp"
+        android:layout_height="50dp"
+        android:text="Programar local"
+        android:textColor="#000000"
+        android:textSize="13dp"
+        app:icon="@drawable/not"
+        app:iconSize="24dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.14"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.948"
+        tools:ignore="TextSizeCheck" />
+
+    <Button
+        android:id="@+id/bt_ver_opiniones"
+        style="@style/diseño_botones"
+        android:layout_width="140dp"
+        android:layout_height="50dp"
+        android:onClick="verOpiniones"
+        android:text="Ver opiniones"
+        android:textColor="#212121"
+        android:textSize="13dp"
+        app:icon="@android:drawable/stat_notify_chat"
+        app:iconSize="24dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.859"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.948"
+        tools:ignore="TextSizeCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
