Se ha mejorado todo jeje

--- a/app/src/main/res/layout/activity_confirmar_datos_de_cita.xml
+++ b/app/src/main/res/layout/activity_confirmar_datos_de_cita.xml
@@ -114,6 +114,7 @@
         android:drawableTint="#000000"
         android:onClick="editarDatos"
         android:text="Editar datos"
+        android:textColor="#050505"
         android:textSize="13dp"
         app:icon="@android:drawable/ic_delete"
         app:iconTint="#F40000"
@@ -131,6 +132,7 @@
         android:layout_height="50dp"
         android:onClick="confirmarDatos"
         android:text="Confirmar datos"
+        android:textColor="#050505"
         android:textSize="13dp"
         app:icon="@android:drawable/ic_input_add"
         app:iconGravity="textEnd"
