--- a/app/src/main/res/layout/activity_perfil_barberia.xml
+++ b/app/src/main/res/layout/activity_perfil_barberia.xml
@@ -133,6 +133,7 @@
         android:layout_height="66dp"
         android:layout_marginTop="36dp"
         android:text="@string/btn_promocion_actual"
+        android:textColor="#191919"
         android:textSize="10dp"
         app:backgroundTint="@null"
         app:icon="@drawable/promo"
@@ -152,6 +153,7 @@
         android:layout_marginTop="12dp"
         android:onClick="irCatalogo"
         android:text="@string/btn_ver_catalogo"
+        android:textColor="#191919"
         android:textSize="10dp"
         app:backgroundTint="@null"
         app:icon="@drawable/catalogo"
@@ -171,6 +173,7 @@
         android:layout_marginTop="228dp"
         android:onClick="tomarFoto"
         android:text="Contribuye"
+        android:textColor="#0B0B0B"
         android:textSize="8sp"
         app:backgroundTint="@null"
         app:icon="@drawable/fto"
