--- a/app/src/main/res/layout/activity_agendar_cita.xml
+++ b/app/src/main/res/layout/activity_agendar_cita.xml
@@ -62,6 +62,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:onClick="llenaDatos"
         android:text="@string/tv_cita"
         android:textColor="#000000"
         android:textSize="50dp"
@@ -115,6 +116,7 @@
         android:drawableTint="#000000"
         android:onClick="btnAgendar"
         android:text="@string/btn_agender"
+        android:textColor="#000000"
         app:backgroundTint="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
