--- a/app/src/main/res/layout/activity_perfil_barberia.xml
+++ b/app/src/main/res/layout/activity_perfil_barberia.xml
@@ -132,12 +132,13 @@
         android:layout_width="129dp"
         android:layout_height="66dp"
         android:layout_marginTop="36dp"
+        android:onClick="verPromociones"
         android:text="@string/btn_promocion_actual"
         android:textColor="#191919"
         android:textSize="10dp"
         app:backgroundTint="@null"
         app:icon="@drawable/promo"
-        app:iconSize="30dp"
+        app:iconSize="20dp"
         app:layout_constraintBottom_toTopOf="@+id/rv_perfil_barberia"
         app:layout_constraintEnd_toEndOf="@+id/textView13"
         app:layout_constraintHorizontal_bias="0.647"
