--- a/app/src/main/res/layout/activity_cascaron_negocio_interfaz_negocio.xml
+++ b/app/src/main/res/layout/activity_cascaron_negocio_interfaz_negocio.xml
@@ -111,6 +111,7 @@
         android:layout_height="124dp"
         android:background="@drawable/dis_back_txt"
         android:gravity="center"
+        android:text="Prueba"
         android:textColor="#000000"
         android:textSize="25dp"
         android:textStyle="italic"
@@ -129,8 +130,9 @@
         android:layout_marginEnd="38dp"
         android:background="@drawable/dis_txt"
         android:gravity="center"
+        android:text="Prueba"
         android:textColor="#000000"
-        android:textSize="13dp"
+        android:textSize="20dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
