--- a/app/src/main/res/layout/activity_ver_promociones.xml
+++ b/app/src/main/res/layout/activity_ver_promociones.xml
@@ -3,7 +3,79 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ver_promociones">
+    android:layout_height="wrap_content"
+    android:background="@drawable/background_screens"
+    tools:context=".ver_opiniones">
+
+    <ImageView
+        android:id="@+id/img_ver_promociones"
+        android:layout_width="97dp"
+        android:layout_height="125dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/txt_titulo_ver_promociones"
+        app:layout_constraintHorizontal_bias="0.477"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/txt_tiempo_promocion"
+        android:layout_width="214dp"
+        android:layout_height="25dp"
+        android:layout_marginBottom="8dp"
+        android:gravity="center"
+        android:textColor="#000000"
+        android:textSize="15dp"
+        app:layout_constraintBottom_toBottomOf="@+id/img_ver_promociones"
+        app:layout_constraintEnd_toEndOf="@+id/txt_precio_ver_promociones"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/txt_precio_ver_promociones"
+        app:layout_constraintTop_toBottomOf="@+id/txt_precio_ver_promociones"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/txt_titulo_ver_promociones"
+        android:layout_width="214dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="8dp"
+        android:gravity="center"
+        android:textColor="#000000"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.817"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/txt_precio_ver_promociones"
+        android:layout_width="214dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="4dp"
+        android:gravity="center"
+        android:textColor="#000000"
+        app:layout_constraintEnd_toEndOf="@+id/txt_des_ver_promociones"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/txt_des_ver_promociones"
+        app:layout_constraintTop_toBottomOf="@+id/txt_des_ver_promociones" />
+
+    <TextView
+        android:id="@+id/txt_des_ver_promociones"
+        android:layout_width="214dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="8dp"
+        android:gravity="center"
+        android:textColor="#000000"
+        android:textSize="13dp"
+        android:textStyle="italic"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/txt_titulo_ver_promociones"
+        app:layout_constraintTop_toBottomOf="@+id/txt_titulo_ver_promociones" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
