--- a/app/src/main/res/layout/item_interfaz_negocio.xml
+++ b/app/src/main/res/layout/item_interfaz_negocio.xml
@@ -8,19 +8,19 @@
     tools:context=".MainActivity">
 
     <ImageView
-        android:id="@+id/img_negocio_interfaz_negocio"
+        android:id="@+id/img_item_lugares_top"
         android:layout_width="120dp"
         android:layout_height="134dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/txt_nombreNegocio_Interfaz_negocio"
+        app:layout_constraintEnd_toStartOf="@+id/nom_item_lugares_top"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="ContentDescription,ImageContrastCheck" />
 
     <TextView
-        android:id="@+id/txt_descripcion_negocio_interfaz_negocio"
+        android:id="@+id/des_lugares_top"
         android:layout_width="196dp"
         android:layout_height="91dp"
         android:layout_marginTop="8dp"
@@ -28,18 +28,18 @@
         android:background="@drawable/background_screens"
         android:gravity="center"
         android:textColor="#000000"
-        android:textSize="20dp"
-        app:layout_constraintBottom_toBottomOf="@+id/img_negocio_interfaz_negocio"
+        android:textSize="15dp"
+        app:layout_constraintBottom_toBottomOf="@+id/img_item_lugares_top"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/txt_nombreNegocio_Interfaz_negocio"
-        app:layout_constraintStart_toStartOf="@+id/txt_nombreNegocio_Interfaz_negocio"
-        app:layout_constraintTop_toBottomOf="@+id/txt_nombreNegocio_Interfaz_negocio"
+        app:layout_constraintStart_toEndOf="@+id/nom_item_lugares_top"
+        app:layout_constraintStart_toStartOf="@+id/nom_item_lugares_top"
+        app:layout_constraintTop_toBottomOf="@+id/nom_item_lugares_top"
         app:layout_constraintVertical_bias="0.0"
         tools:ignore="TextSizeCheck" />
 
     <TextView
-        android:id="@+id/txt_nombreNegocio_Interfaz_negocio"
+        android:id="@+id/nom_item_lugares_top"
         android:layout_width="199dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -50,11 +50,11 @@
         android:textColor="#323131"
         android:textSize="20dp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/txt_descripcion_negocio_interfaz_negocio"
+        app:layout_constraintBottom_toTopOf="@+id/des_lugares_top"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/txt_descripcion_negocio_interfaz_negocio"
+        app:layout_constraintEnd_toStartOf="@+id/des_lugares_top"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/img_negocio_interfaz_negocio"
+        app:layout_constraintStart_toEndOf="@+id/img_item_lugares_top"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
