--- a/app/src/main/res/layout/activity_interfaz_usuario.xml
+++ b/app/src/main/res/layout/activity_interfaz_usuario.xml
@@ -28,9 +28,10 @@
         android:id="@+id/editText_Buscador"
         android:layout_width="212dp"
         android:layout_height="53dp"
-        android:drawableEnd="@drawable/lupa"
+        android:drawableEnd="@drawable/reloj"
+        android:drawableTint="#000000"
         android:ems="10"
-        android:hint="@string/txt_busqueda"
+        android:hint="Buscar..."
         android:inputType="textPersonName"
         android:textColor="#000000"
         android:textColorHint="#000000"
@@ -150,6 +151,7 @@
         android:layout_width="323dp"
         android:layout_height="83dp"
 
+        android:onClick="irPromociones"
         android:text="@string/btn_ver_promociones"
         android:textColor="#000000"
         android:textSize="20sp"
